--- a/src/main/java/interfaz/Inicio.form
+++ b/src/main/java/interfaz/Inicio.form
@@ -124,7 +124,7 @@
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\PC\Documents\NetBeansProjects\Peliculas\src\main\java\imagenes\Inicio.jpg"/>
+          <Image iconType="3" name="/interfaz/Inicio.jpg"/>
         </Property>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[800, 600]"/>
