--- a/src/main/java/interfaz/empleados/UsrCli.form
+++ b/src/main/java/interfaz/empleados/UsrCli.form
@@ -269,6 +269,9 @@
               <Table columnCount="0" rowCount="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTable2MouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
